--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-.logo.leptos:hover {
-  filter: drop-shadow(0 0 2em #a82e20);
-}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -19,22 +16,11 @@
 
 .container {
   margin: 0;
-  padding-top: 10vh;
+  padding-top: 5vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
 }
 
 .row {
@@ -99,6 +85,21 @@ button {
 td, th {
   text-align: left;
   padding: 1vh;
+  border: none;
+  border-style: none;
+}
+
+.teamgen-h {
+  padding-right: 4em;
+  padding-left: 4em;
+}
+
+.team-delta-input {
+  width: 4em;
+}
+
+.team-delta-label {
+  margin: auto;
 }
 
 tr:nth-child(even) {
